--- a/exodecorateur_angryballs_maladroit_sources/exodecorateur_angryballs/maladroit/modele/.gitignore
+++ b/exodecorateur_angryballs_maladroit_sources/exodecorateur_angryballs/maladroit/modele/.gitignore
@@ -21,3 +21,7 @@
 /BloquerParLesBords.class
 /BloquerParUnBord.class
 /FranchissementParoisEtReparationCoteOpose.class
+/AvecAcceleration.class
+/AvecCollision.class
+/FranchissementParoisEtReaparationCoteOpose.class
+/FranchissementParoisReapparition.class
