mise en state sur place. on a StateManger, StateController(abstract) et les deux controller d'état. la billeAPiloter extends de la classe AvecAcceleration

--- a/exodecorateur_angryballs_maladroit_sources/exodecorateur_angryballs/maladroit/modele/.gitignore
+++ b/exodecorateur_angryballs_maladroit_sources/exodecorateur_angryballs/maladroit/modele/.gitignore
@@ -25,3 +25,10 @@
 /AvecCollision.class
 /FranchissementParoisEtReaparationCoteOpose.class
 /FranchissementParoisReapparition.class
+/StateController.class
+/BillePilote.class
+/StateControllerWaitbeCatch.class
+/StateControllerWaitingbeCatch.class
+/ControllerWaitingToBeReleased.class
+/ControllerWaitingToBeCaught.class
+/StateManager.class
